[FIX] 쓰레드 검색에 프로필 이미지 추가